update db models
* rename module in entities
* fix queries
* change TypedDict in BaseModel
* rename page Upload_photos in Import_photos

--- a/notes/gpx.ipynb
+++ b/notes/gpx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "cda696b9",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "GPX(tracks=[GPXTrack(name='Torbole sul Garda', description='Torbole sul Garda', segments=[GPXTrackSegment(points=[...])])])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "f7fd6fc5",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "None\n",
       "Wikiloc - Torbole sul Garda\n",
       "https://www.wikiloc.com/motorboat-trails/torbole-sul-garda-227067493\n"
      ]
@@ -51,6 +52,27 @@
    "source": [
     "print(doc.name)\n",
     "print(doc.link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "88dcb058",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[GPXTrack(name='Torbole sul Garda', description='Torbole sul Garda', segments=[GPXTrackSegment(points=[...])])]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.tracks\n"
    ]
   }
  ],
